@@ -60,7 +60,7 @@ extern "C" {
 
 #ifndef _MEMORY_S_DEFINED
 #define _MEMORY_S_DEFINED
-_CRTIMP errno_t __cdecl memcpy_s(void *_dest,size_t _numberOfElements,const void *_src,size_t _count);
+  errno_t __cdecl memcpy_s (void *_dest,size_t _numberOfElements,const void *_src,size_t _count);
 #endif /*_MEMORY_S_DEFINED*/
 
 #ifdef __cplusplus
