@@ -1,5 +1,7 @@
 2012-08-07  Kai Tietz  <ktietz@redhat.com>
 
+	* secapi/wmemcpy_s.c: New file.
+	* secapi/memcpy_s.c: New file.
 	* secapi/_strdate_s.c: New file.
 	* secapi/_wstrdate_s.c: New file.
 	* secapi/_strtime_s.c: New file.
